--- a/labs/lab_10.qmd
+++ b/labs/lab_10.qmd
@@ -34,9 +34,10 @@ library(knitr)
 ```
 
 ```{r Question 1}
-# Define a projection
+# 1.1: Define a projection
 eqdc <- '+proj=eqdc +lat_0=40 +lon_0=-96 +lat_1=20 +lat_2=60 +x_0=0 +y_0=0 +datum=NAD83 +units=m +no_defs'
 
+eqcd <- st_crs(5070) # sects
 
 ```
 
