--- a/labs/lab_10.qmd
+++ b/labs/lab_10.qmd
@@ -34,45 +34,40 @@ library(knitr)
 ```
 
 ```{r question 1}
-# 1.1 Deinfe eqdc
+# 1.1 Define eqdc projection
 eqdc <- '+proj=eqdc +lat_0=40 +lon_0=-96 +lat_1=20 +lat_2=60 +x_0=0 +y_0=0 +datum=NAD83 +units=m +no_defs'
 
 # 1.2 - Get USA state boundaries
-if(!requireNamespace("AOI", quietly = TRUE)){
+if (!requireNamespace("AOI", quietly = TRUE)) {
   remotes::install_github("mikejohnson51/AOI")
 }
 states <- aoi_get(state = 'conus') %>%
   st_transform(eqdc)
 
 # 1.3 - Get country boundaries for Mexico, the United States of America, and Canada
-if(!requireNamespace("AOI", quietly = TRUE)){
-  remotes::install_github("mikejohnson51/AOI")
-}
 mx_us_can <- aoi_get(country = c("MX", "CA", "USA")) %>%
   st_transform(eqdc)
 
 # 1.4 - Get city locations from the CSV file
 uscities <- read_csv(here("data", "lab_data", "simplemaps_uscities_basic", "uscities.csv"))
 
+# Convert cities to sf object
 cities_sf <- uscities %>% 
   st_as_sf(coords = c("lng", "lat"), crs = 4326, remove = FALSE) %>% 
-  st_transform(5070) %>% 
-  mutate
-
-states <- us_states()
-state_boundaries <- st_cast(states, "MULTILINESTRING") %>% 
   st_transform(5070)
 
-cities_sf <- st_transform(cities_sf, 5070)
-state_boundaries <- st_transform(state_boundaries, 5070)
+# Get US state boundaries and cast to MULTILINESTRING
+states_all <- us_states()
+state_boundaries <- st_cast(states_all, "MULTILINESTRING") %>% 
+  st_transform(5070)
 
+# Filter cities (remove AK, HI, PR)
 cities_sf <- cities_sf %>%
   filter(!state_id %in% c("AK", "HI", "PR"))
 
-# GCS
-df_sf_gcs <- st_as_sf(df,
-                      coords = c("X", "Y"),
-                      crs = 4269)
+# GCS - create sf object in EPSG:4269 from uscities
+df_sf_gcs <- uscities %>%
+  st_as_sf(coords = c("lng", "lat"), crs = 4269, remove = FALSE)
 ```
 
 ```{r question 2}
@@ -322,6 +317,9 @@ ggplot() +
 
 # 3.4 Equidistance boundary from Mexico and Canada
 # Reset dist to mex and can values to make sure correct values are used
+conus_cities_sf <- cities_sf %>%
+  filter(!state_id %in% c("AK", "HI"))
+
 usa_border <- st_transform(usa_border, st_crs(conus_cities_sf))
 mexico_border <- st_transform(mexico_border, st_crs(conus_cities_sf))
 canada_border <- st_transform(canada_border, st_crs(conus_cities_sf))
